--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,9 @@
 </nav>
   {{{body}}}
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="/js/logout.js"></script>
+<script src="/js/like.js"></script>
+<script src="/js/comment.js"></script>
 </html>
