--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -1,34 +1,14 @@
 <div class="row container-fluid" style="margin-top: 5%;" id="design">
   {{#each designs as |design|}}
-    <input type="hidden" id={{design.id}} value={{design.id}} />
+    <input type="hidden" id="design-id" value="{{design.id}}" />
     <div class="col-md-3">
-        <div class="card-placement">
-            <div class="card" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
-                    <div style="display: flex; justify-content: space-evenly; padding-top: 3%; padding-bottom: 3%;">
-                        <span>Uploaded By: {{user.username}}</span>
-                    </div>
-                </ul>
-                    <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" id="{{design.id}}" alt="..." style="height: 300px;">
-                <ul class="list-group list-group-flush">
-                    <form id='{{design.id}}-like' class='like-toggle' data-name='{{design.id}}'>
-                        <input type="hidden" id="design-id" value="{{design.id}}" />
-                        {{!-- {{#if design.likes.userId = req.session.id}} --}}
-                        <button type='submit' class='like-btn'>❤️</button>
-                        {{!-- {{else}} --}}
-                        {{!-- <button type='submit' class='like-btn'>🤍</button>
-                        {{/if}} --}}
-                    </form>
-                    <div style="display: flex; justify-content: space-between; padding: 3%;">
-                        <span><a href="/api/comments/{{design.id}}">View comments</a></span>
-                    </div>
-                    <form id="commentForm">
-                        <div class="input-group input-group-sm mb-3" style="padding-left:2%; padding-right:2%">
-                            <input type="text" id="comment-body" data-id="{{design.id}}" class="form-control" aria-label="Sizing example input" placeholder="Leave a Comment" aria-describedby="inputGroup-sizing-sm">
-                            <button type="submit" class="btn btn-light" style="margin-left: 2%">Send</button>
-                        </div>
-                    </form>
-                </ul> 
+      <div class="card-placement">
+        <div class="card" style="width: 18rem;">
+          <ul class="list-group list-group-flush">
+            <div
+              style="display: flex; justify-content: space-evenly; padding-top: 3%; padding-bottom: 3%;"
+            >
+              <span>Uploaded By: {{user.username}}</span>
             </div>
           </ul>
           <img
@@ -38,13 +18,29 @@
             alt="..."
             style="height: 300px;"
           />
-          <div class="card-body">
-            <div style="display: flex; justify-content: space-between">
-              <span>5</span>
-              <span>Cost ${{design.price}}</span>
-            </div>
-          </div>
           <ul class="list-group list-group-flush">
+            <form
+              id="{{design.id}}-like"
+              class="like-toggle"
+              data-name="{{design.id}}"
+            >
+              <input type="hidden" id="design-id" value="{{design.id}}" />
+              {{!-- {{#if design.likes.userId = req.session.id}} --}}
+
+              <button type="submit" class="like-btn">❤️</button>
+
+              {{!-- {{else}} --}}
+              {{!-- <button type='submit' class='like-btn'>🤍</button>
+                        {{/if}} --}}
+              <span style="margin-left: 25%;">Cost ${{design.price}}</span>
+
+            </form>
+
+            {{!-- <div class="card-body">
+              <div style="display: flex; justify-content: space-between">
+                <span>Cost ${{design.price}}</span>
+              </div>
+            </div> --}}
             <div
               style="display: flex; justify-content: space-between; padding: 3%;"
             >
@@ -77,9 +73,15 @@
     </div>
   {{/each}}
 </div>
+{{!-- 
+<div class="card-body">
+  <div style="display: flex; justify-content: space-between">
+    <span>5</span>
+    <span>Cost ${{design.price}}</span>
+  </div>
+</div> --}}
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"
 ></script>
-
