--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,12 @@
 
   <head>
     <meta charset="utf-8" />
+    {{! Google Fonts }}
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/flatly/bootstrap.min.css"
@@ -22,7 +28,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark my-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">CoHoots</a>
         <button
@@ -58,6 +64,10 @@
       </div>
     </nav>
     {{{body}}}
+
+    <div class="footer">
+      <p>Copyright © 2021: Team Nasty. All rights reserved.</p>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -67,5 +77,5 @@
   <script src="/js/logout.js"></script>
   <script src="/js/deleteDesign.js"></script>
   <script src="/js/like.js"></script>
-<script src="/js/comment.js"></script>
+  <script src="/js/comment.js"></script>
 </html>
